# Generative-Art

./: .gitignore  README.md
Attractors/: Cargo.toml
Attractors/src/: main.rs
CosmicOddity/: global.d.ts  index.html  package-lock.json
CosmicOddity/sketch/: Controls.ts  CosmicSphere.ts  Particle.ts  VectorField.ts  misc.ts  sketch.ts
DomainWarping/: index.html  sketch.js
ElectromagneticField/: Cargo.toml
ElectromagneticField/src/: charge.rs  main.rs  particle.rs
EvenlySpacedFlowField/: README.md  package.json  tsconfig.json
EvenlySpacedFlowField/sketch/: Curve.ts  StartingPointPicker.ts  sketch.ts
FlowField/: Controls.js  Particle.js  index.html  jsconfig.json  sketch.js
FlowerField/: tsconfig.json
FlowerField/sketch/: Curve.ts  CurveBasicFlower.ts  CurveSandbox.ts  CurveTulip.ts  Limiter.ts  StartingPointPicker.ts  misc.ts  sketch.ts
LSystems/: Cargo.toml
LSystems/src/: main.rs
LSystems/src/lsystem/: mod.rs  (+4 more)
NannouTemplate/: Cargo.toml  README.md
NannouTemplate/src/: main.rs
PerlinNoiseFlowField/: Cargo.toml
PerlinNoiseFlowField/src/: particle.rs
Physarum/: .gitignore  Cargo.toml  README.md
Physarum/src/: main.rs  ui.rs
Physarum/src/physarum/: agent.rs  blur.rs  grid.rs  mod.rs  palette.rs  particle.rs  physarum_model.rs  population_config.rs  trig.rs  util.rs
QuadTreeFlowField/: Controls.js  FlowField.js  Particle.js  Quadtree.js  index.html  sketch.js
StarField/: global.d.ts  index.html  package-lock.json
StarField/sketch/: CosmicSphere.ts  Particle.ts  Vec4.ts  sketch.ts
cosmic_oddity/: package-lock.json  tsconfig.json
(+12 files in other folders)
